--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
         <!-- // Education -->
-        <section class="Nice" id="nice">
+        <section class="Nice" id="Nice">
             <div class="wrap">
                 <h2>Un poco de lo que me gusta</h2>
                 <button onclick="GoRandom()">Randomizar</button>
